--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -46,6 +46,7 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
+$ivory:   #F5F0EC !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -67,14 +68,15 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       #00cc99; // $blue !default;
-$secondary:     $gray-600 !default;
+$primary:       #FFA500 !default;
+$secondary:     #E6F5B3 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-100 !default;
+$light:         $white !default;
 $dark:          $gray-900 !default;
+$ivory:         $ivory !default ;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -86,7 +88,8 @@ $theme-colors: (
   "warning":    $warning,
   "danger":     $danger,
   "light":      $light,
-  "dark":       $dark
+  "dark":       $dark,
+  "ivory":      $ivory,
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -250,11 +253,16 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 $spacer: 1rem !default;
 $spacers: (
   0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
-  3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
+  1: $spacer * .25, //4
+  2: $spacer * .5, //8
+  3: $spacer * 0.75,//12
+  4: $spacer, //16
+  5: $spacer * 1.25, //20
+  6: $spacer * 1.5, //24
+  7: $spacer * 1.75,//28
+  8: $spacer * 2, //32
+  9: $spacer * 3, //48
+  10: $spacer * 4 //64
 ) !default;
 
 $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) !default;
@@ -285,7 +293,7 @@ $body-text-align:           null !default;
 //
 // Style anchor elements.
 
-$link-color:                              $primary !default;
+$link-color:                              white !default;
 $link-decoration:                         underline !default;
 $link-shade-percentage:                   20% !default;
 $link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
@@ -451,12 +459,17 @@ $h6-font-size:                $font-size-base !default;
 
 // scss-docs-start font-sizes
 $font-sizes: (
-  1: $h1-font-size,
-  2: $h2-font-size,
-  3: $h3-font-size,
-  4: $h4-font-size,
-  5: $h5-font-size,
-  6: $h6-font-size
+  0: 0,
+  1: $spacer * .25, //4
+  2: $spacer * .5, //8
+  3: $spacer * 0.75,//12
+  4: $spacer, //16
+  5: $spacer * 1.25, //20
+  6: $spacer * 1.5, //24
+  7: $spacer * 1.75,//28
+  8: $spacer * 2, //32
+  9: $spacer * 3, //48
+  10: $spacer * 4 //64
 ) !default;
 // scss-docs-end font-sizes
 
