--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -1,61 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title><%- title %></title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="./assets/style/all.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+    />
+    <link rel="stylesheet" href="./assets/style/all.css" />
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light pt-4 pb-4 bg-primary">
+      <div class="container">
+        <a href="#"
+          ><img
+            src="./assets/images/logo.png"
+            alt="logo"
+            class="img-fluid logo bg-light rounded"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center fs-5">
+            <li class="mb-5 m-lg-0 me-lg-10">
+              <a class="text-white" aria-current="page" href="#">狗狗專區</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+            <li class="mb-5 m-lg-0 me-lg-10">
+              <a class="text-white" href="#">貓貓專區</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
+            <li class="mb-5 m-lg-0 me-lg-10">
+              <a class="text-white" href="#">部落專欄</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <li class="">
+              <a class="text-white" href="#">常見問題</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
 
     <%- contents %>
 
-    <footer class="footer">
-      footer
+    <footer class="bg-primary pt-10 pb-8">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <ul class="d-flex">
+            <li><a href="" class="text-white me-8">首頁</a></li>
+            <li><a href="" class="text-white me-8">狗狗專區</a></li>
+            <li><a href="" class="text-white me-8">貓貓專區</a></li>
+            <li><a href="" class="text-white me-8">部落專欄</a></li>
+            <li><a href="" class="text-white">常見問題</a></li>
+          </ul>
+
+          <ul class="d-flex">
+            <li>
+              <a href="#" class="me-8">
+                <img
+                  src="./assets/images/ic-social-fb.png"
+                  alt=""
+                  class="social-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#" class="me-8">
+                <img
+                  src="./assets/images/ic_social_ig.png"
+                  alt=""
+                  class="social-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./assets/images/ic_social_line.png"
+                  alt=""
+                  class="social-icon"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div
+          class="mt-9 d-flex flex-column footer-icon font-roboto fs-8 border-bottom pb-8"
+        >
+          <a href="Tel:0800-000-000">
+            <span class="material-symbols-outlined me-5"> call </span
+            >0800-000-000
+          </a>
+          <a href="mailto:petworld@gamil.com">
+            <span class="material-symbols-outlined mt-7 me-5"> mail </span
+            >petworld@gamil.com
+          </a>
+        </div>
+        <div class="d-flex justify-content-between align-items-center mt-8">
+          <p class="text-white fs-4">
+            Copyright © 2020 Glasses.All rights reserved.
+          </p>
+          <ul class="d-flex text-white fs-3">
+            <li>
+              <a href="" class="me-9">隱私權政策</a>
+            </li>
+            <li>
+              <a href="">服務條款</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
 
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
   </body>
-
 </html>
