--- a/app/assets/style/pages/_layout.scss
+++ b/app/assets/style/pages/_layout.scss
@@ -11,9 +11,18 @@ footer{
     .social-icon{
         height: 48px;
         width: 48px;
+        
     }
-    
-}
-.footer-icon{
+    .footer-icon{
     font-size: 36px; 
+    }
+    @include media-breakpoint-up(lg) {
+        // .social-icon{
+        //     height: 48px;
+        //     width: 48px;    
+        // }
+        .footer-info{
+            font-size: 32px !important;
+        }
+    }
 }
