--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -47,6 +47,7 @@ $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
 $ivory:   #F5F0EC !default;
+$gray:    #707070 !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -62,7 +63,6 @@ $colors: (
   "teal":       $teal,
   "cyan":       $cyan,
   "white":      $white,
-  "gray":       $gray-600,
   "gray-dark":  $gray-800
 ) !default;
 // scss-docs-end colors-map
@@ -90,6 +90,7 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark,
   "ivory":      $ivory,
+  "gray" :      $gray,
 ) !default;
 // scss-docs-end theme-colors-map
 
